syntax = "proto3";

package proto;

option go_package = "github.com/artnikel/TradingSystem/proto";

message Actions {
    string Company = 1;
    double Price = 2;
}

service PriceService {
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {}
}

message SubscribeRequest {
    string uuid = 1;
    repeated string selectedActions = 2;
}

message SubscribeResponse {
    repeated Actions Actions = 1;
}
